# BCSockets

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/BCSockets/: BCServer.hpp  BCSocket.hpp  BCSocketBase.hpp  BCSocketException.hpp  BCSocketHostAddress.hpp  BCSocketNet.hpp  BCSocketTls.hpp  BCSocketUnix.hpp  BCSocketsApp.hpp
include/BCSockets/http/: BCHttpException.hpp  BCHttpExchange.hpp  BCHttpsClient.hpp
include/BCSockets/mp/: BCSocketsLinux.hpp  BCSocketsWindows.hpp
include/BCSockets/native/: BCSocketImplNative.hpp
include/BCSockets/ssl/: BCSSLContext.hpp  BCSSLError.hpp  BCSSLException.hpp
test/: BCSocketImplMock.hpp  test.cpp  testBCSockets.h  testHttpExchange.cpp  testHttpRequest.cpp  testHttpResponse.cpp  testMockEngine.cpp  testMockSocket.cpp  testSSLContext.cpp  testStream.cpp  testUnix.cpp
test/mockEngine/: BCSocketMockEngine.cpp  BCSocketMockEngine.h  BCSocketMockInternal.cpp
tlsclient/: bctlsclient.cpp
